<resources>
    <string name="app_name">Popular Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="error_message">No network connection</string>
    <string name="empty_list_message">Your favourite list is empty\nHeart your fave!</string>
    <string name="highest_rated">Highest rated</string>
    <string name="most_popular">Most popular</string>
    <string name="desc_backdrop">Backdrop of the movie</string>
    <string name="desc_poster">Movie poster</string>
    <string name="language">Language</string>
    <string name="runtime">Runtime</string>
    <string name="runtime_value">%1$s min</string>
    <string name="reviews">Reviews</string>

    <string name="youtube_thumbanil_path" translatable="false">https://img.youtube.com/vi/%1$s/0.jpg</string>
    <string name="trailers">Trailers</string>
    <string name="favourite">Favourite</string>

    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_label_popular">Most Popular</string>
    <string name="pref_sort_label_high_rated">Highest Rated</string>
    <string name="pref_sort_label_upcoming">Upcoming</string>
    <string name="pref_sort_label_favourites">Favourites</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_popular" translatable="false">popular</string>
    <string name="pref_sort_high_rated" translatable="false">top_rated</string>
    <string name="pref_sort_upcoming" translatable="false">upcoming</string>
    <string name="pref_sort_favourites" translatable="false">favourites</string>
    <string name="pref_sort_default">@string/pref_sort_popular</string>
    <string name="action_setting">Settings</string>
    <string name="action_share">Share</string>
    
    <string name="remove_favourite">"Removed from Favourite"</string>
    <string name="add_favourite">Added to Favourite</string>
    <string name="action">Action</string>

    <string name="preference_key_file" translatable="false">com.example.android.popularmovies.PREFERENCE_FILE_KEY</string>
    <string name="refresh">Refresh</string>
</resources>
