<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/collapsing_toolbar_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/collapsing_toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <FrameLayout
                    android:id="@+id/backdrop_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_detail_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/backdrop_height"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/desc_backdrop"
                        tools:src="@drawable/ic_movie_white_24dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/backdrop_height"
                        android:layout_gravity="bottom"
                        android:background="@drawable/gradient_backdrop" />
                </FrameLayout>

                <TextView
                    android:id="@+id/user_rating_label"
                    style="@style/DetailInfoStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/rating_bottom_margin"
                    android:layout_marginEnd="@dimen/content_horizontal_margin"
                    android:layout_marginRight="@dimen/content_horizontal_margin"
                    android:text="@string/user_rating"
                    android:textColor="@color/colorRatingLabel"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/backdrop_frame"
                    app:layout_constraintEnd_toEndOf="@+id/backdrop_frame" />

                <TextView
                    android:id="@+id/tv_detail_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_horizontal_margin"
                    android:layout_marginLeft="@dimen/label_horizontal_margin"
                    android:layout_marginRight="@dimen/label_horizontal_margin"
                    android:layout_marginStart="@dimen/label_horizontal_margin"
                    android:textColor="@color/colorRating"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/user_rating_label"
                    app:layout_constraintEnd_toEndOf="@+id/user_rating_label"
                    app:layout_constraintStart_toStartOf="@+id/user_rating_label"
                    tools:text="9.6" />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/pb_loading_indicator_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_error_message_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTint="@color/colorAccent"
        android:drawableTop="@drawable/ic_signal_wifi_off_black_24dp"
        android:text="@string/error_message"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="invisible" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_padding_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:layout_marginLeft="@dimen/content_horizontal_margin"
                android:layout_marginStart="@dimen/content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_padding_vertical"
                android:adjustViewBounds="true"
                android:background="@drawable/border"
                android:contentDescription="@string/desc_poster"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/release_date_label"
                style="@style/DetailInfoStyle"
                android:layout_marginLeft="@dimen/content_horizontal_margin"
                android:layout_marginStart="@dimen/content_horizontal_margin"
                android:text="@string/release_date"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/runtime_label"
                tools:layout_editor_absoluteY="480dp" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_horizontal_margin"
                android:layout_marginStart="@dimen/content_horizontal_margin"
                app:layout_constraintBaseline_toBaselineOf="@+id/release_date_label"
                app:layout_constraintStart_toEndOf="@+id/barrier3"
                tools:text="12 Jan 2014" />

            <TextView
                android:id="@+id/runtime_label"
                style="@style/DetailInfoStyle"
                android:text="@string/runtime"
                app:layout_constraintStart_toStartOf="@+id/release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/language_label"
                tools:layout_editor_absoluteY="454dp" />

            <TextView
                android:id="@+id/tv_detail_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/runtime_label"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_release_date"
                tools:text="144 minutes" />

            <TextView
                android:id="@+id/language_label"
                style="@style/DetailInfoStyle"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/runtime_label"
                app:layout_constraintTop_toBottomOf="@+id/rv_genre"
                tools:layout_editor_absoluteY="498dp" />

            <TextView
                android:id="@+id/tv_detail_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_horizontal_margin"
                android:layout_marginStart="@dimen/content_horizontal_margin"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/language_label"
                app:layout_constraintStart_toEndOf="@+id/barrier3"
                tools:text="English" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_detail_poster" />


            <android.support.constraint.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/barrier_margin"
                android:layout_marginStart="@dimen/barrier_margin"
                app:barrierDirection="right"
                app:constraint_referenced_ids="runtime_label,release_date_label, language_label"
                app:layout_constraintStart_toStartOf="parent" />


            <android.support.v7.widget.CardView
                android:id="@+id/cardview_overview"
                style="@style/ContentCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/overview_label"
                        style="@style/ContentLabelStyle"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/synopsis" />

                    <TextView
                        android:id="@+id/tv_detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_padding_vertical"
                        android:layout_marginEnd="@dimen/content_horizontal_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:layout_marginStart="@dimen/content_horizontal_margin"
                        android:lineSpacingExtra="3dp"
                        android:lineSpacingMultiplier="1" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_trailer"
                style="@style/ContentCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_overview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/trailers_label"
                        style="@style/ContentLabelStyle"
                        android:layout_marginBottom="8dp"
                        android:text="@string/trailers" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_reviews"
                style="@style/ContentCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_trailer"
                tools:layout_editor_absoluteY="584dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reviews_label"
                        style="@style/ContentLabelStyle"
                        android:text="@string/reviews" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:scrollbars="none" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding_vertical"
        android:src="@drawable/ic_favorite_48dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
